tidying and comments

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,7 +1,7 @@
 <div class=about>
   <h3>Spiralizer</h3>
 
-  <P>A twitter bot that collects a recent image from Flickr, <br>spiralizes it, and posts to <a href='https://twitter.com/spiraltron'>@spiraltron</a>.</p>
+  <P>A Twitter bot that collects a recent image from Flickr, <br>spiralizes it, and posts to <a href='https://twitter.com/spiraltron'>@spiraltron</a>.</p>
 </div>
 
 <div id=imgcredit>
